--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DTI Waste Segregation</title>
+    <title>RBVM Awareness</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="images/logo.png" type="image/png">
 </head>
 <body>
     <header>
         <nav>
-            <div class="logo">DTI Waste Segregation</div>
+            <div class="logo">
+                <img src="images/logo.png" alt="RBVM Logo" style="height: 40px; vertical-align: middle;">
+                <span>RBVM Awareness</span>
+            </div>
+            <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+
             <ul class="nav-links">
                 <li><a href="#about.html">About</a></li>
                 <li><a href="quizzes.html">Quiz</a></li>
@@ -23,13 +29,12 @@
 
     <main>
         <section id="about">
-            <h1>About DTI Waste Segregation</h1>
+            <h1>About RBVM Awareness</h1>
             <p>Our mission is to make waste segregation easy and rewarding through reverse vending machines.</p>
             <img src="images/reverse-vending-machine.jpg" alt="Reverse Vending Machine" />
             <p>By depositing plastic and metal waste, you earn supercoins that can be deposited into your account.</p>
         </section>
 
-       
         <section id="deposit">
             <h2>Deposit Your Supercoins</h2>
             <form id="deposit-form">
@@ -41,12 +46,12 @@
         <section id="contact">
             <h2>Contact Us</h2>
             <p>If you have any questions, feel free to reach out!</p>
-            <p>Email: info@dtiwaste.com</p>
+            <p>Email: contact@rbvmawareness.com</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2023 DTI Waste Segregation. All Rights Reserved.</p>
+        <p>&copy; 2023 RBVM Awareness. All Rights Reserved.</p>
     </footer>
 
     <script src="script.js"></script>
