--- a/signup.html
+++ b/signup.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up - DTI Waste Segregation</title>
+    <title>Sign Up - RBVM Awareness</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="images/logo.png" type="image/png">
 </head>
 <body>
     <header>
         <nav>
-            <div class="logo">DTI Waste Segregation</div>
+            <div class="logo">
+                <img src="images/logo.png" alt="RBVM Logo" style="height: 40px; vertical-align: middle;">
+                <span>RBVM Awareness</span>
+            </div>
         </nav>
     </header>
 
@@ -27,7 +31,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 DTI Waste Segregation. All Rights Reserved.</p>
+        <p>&copy; 2023 RBVM Awareness. All Rights Reserved.</p>
     </footer>
 
     <script src="script.js"></script>
