--- a/individual-quiz.html
+++ b/individual-quiz.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Individual Quiz - DTI Waste Segregation</title>
+    <title>Individual Quiz - RBVM Awareness</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="images/logo.png" type="image/png">
 </head>
 <body>
     <header>
         <nav>
-            <div class="logo">DTI Waste Segregation</div>
+            <div class="logo">
+                <img src="images/logo.png" alt="RBVM Logo" style="height: 40px; vertical-align: middle;">
+                <span>RBVM Awareness</span>
+            </div>
+            <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="login.html">Login</a></li>
@@ -37,7 +43,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 DTI Waste Segregation. All Rights Reserved.</p>
+        <p>&copy; 2023 RBVM Awareness. All Rights Reserved.</p>
     </footer>
 
     <script src="script.js"></script>
