--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RBVM Awareness</title>
+    <title>RBRVM Awareness</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="images/logo.png" type="image/png">
+    <link rel="icon" href="./k/logo.jpg" type="image/png">
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">
-                <img src="images/logo.png" alt="RBVM Logo" style="height: 40px; vertical-align: middle;">
-                <span>RBVM Awareness</span>
+                <img src="./k/logo.jpg" alt="RBRVM Logo" style="height: 40px; vertical-align: middle;">
+                <span>RBRVM Awareness</span>
             </div>
             <button class="menu-toggle" onclick="toggleMenu()">☰</button>
 
@@ -29,7 +29,7 @@
 
     <main>
         <section id="about">
-            <h1>About RBVM Awareness</h1>
+            <h1>About RBRVM Awareness</h1>
             <p>Our mission is to make waste segregation easy and rewarding through reverse vending machines.</p>
             <img src="images/reverse-vending-machine.jpg" alt="Reverse Vending Machine" />
             <p>By depositing plastic and metal waste, you earn supercoins that can be deposited into your account.</p>
@@ -46,12 +46,12 @@
         <section id="contact">
             <h2>Contact Us</h2>
             <p>If you have any questions, feel free to reach out!</p>
-            <p>Email: contact@rbvmawareness.com</p>
+            <p>Email: contact@rbrvmawareness.com</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2023 RBVM Awareness. All Rights Reserved.</p>
+        <p>&copy; 2023 RBRVM Awareness. All Rights Reserved.</p>
     </footer>
 
     <script src="script.js"></script>
