--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up - RBVM Awareness</title>
+    <title>Sign Up - RBRVM Awareness</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="images/logo.png" type="image/png">
 </head>
@@ -11,8 +11,8 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="images/logo.png" alt="RBVM Logo" style="height: 40px; vertical-align: middle;">
-                <span>RBVM Awareness</span>
+                <img src="images/logo.png" alt="RBRVM Logo" style="height: 40px; vertical-align: middle;">
+                <span>RBRVM Awareness</span>
             </div>
         </nav>
     </header>
@@ -31,7 +31,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 RBVM Awareness. All Rights Reserved.</p>
+        <p>&copy; 2023 RBRVM Awareness. All Rights Reserved.</p>
     </footer>
 
     <script src="script.js"></script>
