--- a/article.html
+++ b/article.html
@@ -31,23 +31,38 @@
         <section id="articles">
             <h1>Articles on Waste Segregation and Recycling</h1>
             <article>
-                <h2><a href="article1.html">The Importance of Waste Segregation</a></h2>
+                <a href="./articles/The Importance of Waste Segregation.html">
+                    <img src="images/importance_of_waste_segregation.jpg" alt="The Importance of Waste Segregation" class="thumbnail">
+                    <h2>The Importance of Waste Segregation</h2>
+                </a>
                 <p>Learn why waste segregation is essential for effective waste management and how it benefits the environment.</p>
             </article>
             <article>
-                <h2><a href="article2.html">How Reverse Vending Machines Work</a></h2>
+                <a href="./articles/How Reverse Vending Machines Work.html">
+                    <img src="images/how_reverse_vending_machines_work.jpg" alt="How Reverse Vending Machines Work" class="thumbnail">
+                    <h2>How Reverse Vending Machines Work</h2>
+                </a>
                 <p>Discover the technology behind reverse vending machines and how they encourage recycling.</p>
             </article>
             <article>
-                <h2><a href="article3.html">Top 5 Benefits of Recycling</a></h2>
+                <a href="./articles/Top 5 Benefits of Recycling.html">
+                    <img src="images/top_5_benefits_of_recycling.jpg" alt="Top 5 Benefits of Recycling" class="thumbnail">
+                    <h2>Top 5 Benefits of Recycling</h2>
+                </a>
                 <p>Explore the numerous benefits of recycling and how it contributes to a sustainable future.</p>
             </article>
             <article>
-                <h2><a href="article4.html">Community Initiatives for Waste Management</a></h2>
+                <a href="./articles/Community Initiatives for Waste Management.html">
+                    <img src="images/community_initiatives.jpg" alt="Community Initiatives for Waste Management" class="thumbnail">
+                    <h2>Community Initiatives for Waste Management</h2>
+                </a>
                 <p>Find out how communities are coming together to improve waste management practices.</p>
             </article>
             <article>
-                <h2><a href="article5.html">The Future of Recycling Technology</a></h2>
+                <a href="./articles/The Future of Recycling Technology.html">
+                    <img src="images/future_of_recycling_technology.jpg" alt="The Future of Recycling Technology" class="thumbnail">
+                    <h2>The Future of Recycling Technology</h2>
+                </a>
                 <p>Get insights into the latest advancements in recycling technology and their potential impact.</p>
             </article>
         </section>
