--- a/quizzes.html
+++ b/quizzes.html
@@ -44,6 +44,21 @@
                     <p>Understand the impact of plastic pollution on the environment.</p>
                     <a href="individual-quiz.html?quiz=3" class="quiz-button">Take Quiz</a>
                 </div>
+                <div class="quiz-item">
+                    <h2>Quiz 4: Composting Techniques</h2>
+                    <p>Discover effective composting techniques and their benefits.</p>
+                    <a href="individual-quiz.html?quiz=4" class="quiz-button">Take Quiz</a>
+                </div>
+                <div class="quiz-item">
+                    <h2>Quiz 5: Sustainable Practices</h2>
+                    <p>Learn about sustainable practices that can help the environment.</p>
+                    <a href="individual-quiz.html?quiz=5" class="quiz-button">Take Quiz</a>
+                </div>
+                <div class="quiz-item">
+                    <h2>Quiz 6: Environmental Policies</h2>
+                    <p>Test your knowledge on environmental policies and regulations.</p>
+                    <a href="individual-quiz.html?quiz=6" class="quiz-button">Take Quiz</a>
+                </div>
             </div>
         </section>
     </main>
