--- a/signup.html
+++ b/signup.html
@@ -32,6 +32,10 @@
 
     <footer>
         <p>&copy; 2023 RBRVM Awareness. All Rights Reserved.</p>
+        <ul class="nav-links">
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/contact.html">Contact Us</a></li>
+        </ul>
     </footer>
 
     <script src="script.js"></script>
