--- a/article.html
+++ b/article.html
@@ -17,12 +17,12 @@
             <button class="menu-toggle" onclick="toggleMenu()">☰</button>
 
             <ul class="nav-links">
-                <li><a href="#about.html">About</a></li>
-                <li><a href="quizzes.html">Quiz</a></li>
-                <li><a href="articles.html">Articles</a></li>
-                <li><a href="#deposit.html">Deposit Supercoins</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./quizzes.html">Quiz</a></li>
+                <li><a href="./articles.html">Articles</a></li>
+                <li><a href="./deposit.html">Deposit Supercoins</a></li>
+                <li><a href="./login.html">Login</a></li>
+                <li><a href="./signup.html">Sign Up</a></li>
             </ul>
         </nav>
     </header>
@@ -70,6 +70,10 @@
 
     <footer>
         <p>&copy; 2023 RBRVM Awareness. All Rights Reserved.</p>
+        <ul class="nav-links">
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/contact.html">Contact Us</a></li>
+        </ul>
     </footer>
 
     <script src="script.js"></script>
