--- a/quiz/Waste Management Basics.html
+++ b/quiz/Waste Management Basics.html
@@ -17,10 +17,13 @@
             <button class="menu-toggle" onclick="toggleMenu()">☰</button>
 
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
-                <li><a href="quizzes.html">Quizzes</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/quizzes.html">Quiz</a></li>
+                <li><a href="/article.html">Articles</a></li>
+                <li><a href="/deposit.html">Deposit Supercoins</a></li>
+                <li><a href="/login.html">Login</a></li>
+                <li><a href="/signup.html">Sign Up</a></li>
+                
             </ul>
         </nav>
     </header>
@@ -49,8 +52,12 @@
 
     <footer>
         <p>&copy; 2023 RBRVM Awareness. All Rights Reserved.</p>
+        <ul class="nav-links">
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/contact.html">Contact Us</a></li>
+        </ul>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
