--- a/deposit.html
+++ b/deposit.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deposit Supercoins - RBRVM</title>
-    <link rel="stylesheet" href="deposit.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
