--- a/about.html
+++ b/about.html
@@ -54,6 +54,6 @@
         </ul>
     </footer>
 
-    <script src="about.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
