--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,6 @@
         </ul>
     </footer>
 
-    <script src="contact.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
