--- a/login.html
+++ b/login.html
@@ -37,6 +37,6 @@
         </ul>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="/scripts/script.js"></script>
 </body>
 </html>
