--- a/quizzes.html
+++ b/quizzes.html
@@ -73,6 +73,6 @@
         </ul>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
