--- a/signup.html
+++ b/signup.html
@@ -38,6 +38,6 @@
         </ul>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
