--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="./k/logo.jpg" alt="RBRVM Logo" style="height: 40px; vertical-align: middle;">
+                <img src="images/logo.png" alt="RBRVM Logo" style="height: 40px; vertical-align: middle;">
                 <span>RBRVM Awareness</span>
             </div>
         </nav>
@@ -37,6 +37,6 @@
         </ul>
     </footer>
 
-    <script src="/scripts/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
