--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   #splashScreen {
     position: fixed;
     top:0; left:0; right:0; bottom:0;
-    background:white;
+    background: #2E7D32; /* Solid green background */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -22,10 +22,24 @@
     opacity: 0;
     pointer-events: none;
   }
+
+  
+
   #splashScreen img {
-    max-width: 200px;
-    max-height: 200px;
+    max-width: 220px;
+    max-height: 220px;
+    filter: drop-shadow(0 0 5px rgba(0,0,0,0.5));
+    animation: logoZoomIn 2s ease forwards;
   }
+
+@keyframes logoZoomIn {
+    from {
+        transform: scale(1);
+    }
+    to {
+        transform: scale(1.2);
+    }
+}
 
   /* Hide main content initially */
   main, header, footer {
@@ -40,7 +54,8 @@
     opacity: 1;
   }
 
-  /* Your existing CSS snippet for sections and layout could go here or be linked */
+  /* Your existing CSS snippet for sections and layout */
+
   .section {
     margin-bottom: 40px;
   }
@@ -87,6 +102,33 @@
     flex-direction: column;
     align-items: center;
     padding: 20px;
+  }
+
+  /* Footer */
+  footer {
+    background: #2E7D32; /* Match splash screen green */
+    color: white;
+    text-align: center;
+    padding: 25px 20px;
+    font-size: 0.9rem;
+    box-shadow: 0 -3px 8px rgba(0,0,0,0.2);
+  }
+  footer .nav-links {
+    list-style: none;
+    padding: 0;
+    margin: 12px 0 0;
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+  }
+  footer .nav-links li a {
+    color: #A5D6A7; /* lighter green tone */
+    text-decoration: none;
+    font-weight: 600;
+    transition: color 0.3s ease;
+  }
+  footer .nav-links li a:hover {
+    color: white;
   }
 </style>
 </head>
@@ -169,14 +211,12 @@
   const splash = document.getElementById('splashScreen');
   splash.addEventListener('click', () => {
     splash.classList.add('fadeOut');
-    // Wait for the fade-out transition to finish before removing splash and showing content
     splash.addEventListener('transitionend', () => {
       splash.style.display = 'none';
-      document.body.classList.add('loaded'); // shows main content with opacity transition
+      document.body.classList.add('loaded');
     }, { once: true });
   });
 
-  // Optional: menu toggle function for nav
   function toggleMenu() {
     const navLinks = document.querySelector('.nav-links');
     navLinks.classList.toggle('active');
