--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   #splashScreen {
     position: fixed;
     top:0; left:0; right:0; bottom:0;
-    background: #2E7D32; /* Solid green background */
+    background: #76d27b; /* Solid green background */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -131,6 +131,7 @@
     color: white;
   }
 </style>
+<link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <!-- Splash Screen Overlay -->
@@ -222,5 +223,6 @@
     navLinks.classList.toggle('active');
   }
 </script>
+<script src="./scripts/script.js"></script>
 </body>
 </html>
