--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     color: white;
   }
 </style>
-<link rel="stylesheet" href="styles.css" />
+<link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
   <!-- Splash Screen Overlay -->
@@ -158,7 +158,7 @@
   </header>
 
   <main>
-    <section class="section">
+    <section class="sections">
       <h2>About the Project</h2>
       <div class="content-box">
         <h3>Reverse Vending Machine Initiative</h3>
