--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         <section id="about">
             <h1>About RBRVM Awareness</h1>
             <p>Our mission is to make waste segregation easy and rewarding through reverse vending machines.</p>
-            <img src="images/reverse-vending-machine.jpg" alt="Reverse Vending Machine" />
+            <img src="/k/logo.jpg" alt="Reverse Vending Machine" />
             <p>By depositing plastic and metal waste, you earn supercoins that can be deposited into your account.</p>
 
             <h2>About the Project</h2>
@@ -54,6 +54,6 @@
         </ul>
     </footer>
 
-    <script src="./scripts/script.js"></script>
+    <script src="/scripts/script.js"></script>
 </body>
 </html>
