--- a/quiz/Waste Management Basics.html
+++ b/quiz/Waste Management Basics.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz 1: Waste Management Basics - RBRVM Awareness</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="images/logo.png" type="image/png">
+    <link rel="icon" href="/k/logo.jpg" type="image/png">
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">
-                <img src="images/logo.png" alt="RBRVM Logo" style="height: 40px; vertical-align: middle;">
+                <img src="/k/logo.jpg" alt="RBRVM Logo" style="height: 40px; vertical-align: middle;">
                 <span>RBRVM Awareness</span>
             </div>
             <button class="menu-toggle" onclick="toggleMenu()">☰</button>
