--- a/why-recycling-matters.html
+++ b/why-recycling-matters.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>How Reverse Vending Machines Work - RBRVM Awareness</title>
+    <title>Why Recycling Matters - RBRVM Awareness</title>
     <link rel="stylesheet" href="style/styles.css">
     <link rel="icon" href="./k/logo.jpg" type="image/png">
 </head>
@@ -17,7 +17,6 @@
             <button class="menu-toggle" onclick="toggleMenu()">☰</button>
 
             <ul class="nav-links">
-                <li><a href="/index.html">Home</a></li>
                 <li><a href="/quizzes.html">Quiz</a></li>
                 <li><a href="/articles.html">Articles</a></li>
                 <li><a href="/deposit.html">Deposit Supercoins</a></li>
@@ -29,18 +28,18 @@
 
     <main>
         <section id="article">
-            <h1>How Reverse Vending Machines Work</h1>
-            <p>Reverse vending machines (RVMs) are innovative devices that allow users to deposit recyclable materials in exchange for rewards. These machines are designed to accept various types of containers, such as plastic bottles and aluminum cans, making recycling more accessible and rewarding.</p>
-            <img src="/k/reverse-vending-machine.jpg" alt="Reverse Vending Machine" />
-            <p>When a user deposits a container, the machine scans the barcode to verify its recyclability. Once accepted, the machine provides a reward, which can be in the form of cash, coupons, or points that can be redeemed for discounts.</p>
-            <h2>How RVMs Encourage Recycling</h2>
+            <h1>Why Recycling Matters</h1>
+            <p>Recycling is an essential practice that helps reduce waste and conserve natural resources. By recycling materials, we can minimize the environmental impact of waste disposal and promote sustainability.</p>
+            <img src="./k/recycling.jpg" alt="Recycling" />
+            <p>Every year, millions of tons of recyclable materials end up in landfills. By recycling, we can divert these materials from landfills and reduce the need for new raw materials, which in turn helps to preserve our planet's resources.</p>
+            <h2>Benefits of Recycling</h2>
             <ul>
-                <li>Provides immediate incentives for recycling</li>
-                <li>Reduces litter in public spaces</li>
-                <li>Increases public awareness about recycling</li>
-                <li>Facilitates the collection of recyclable materials</li>
+                <li>Reduces the amount of waste sent to landfills and incinerators</li>
+                <li>Conserves natural resources such as timber, water, and minerals</li>
+                <li>Saves energy and reduces greenhouse gas emissions</li>
+                <li>Encourages the development of new products and technologies</li>
             </ul>
-            <p>By integrating technology with recycling efforts, reverse vending machines play a significant role in promoting sustainable practices and encouraging individuals to participate in waste management.</p>
+            <p>By understanding the importance of recycling and actively participating in recycling programs, we can all contribute to a healthier planet and a more sustainable future.</p>
         </section>
     </main>
 
