--- a/article.html
+++ b/article.html
@@ -17,7 +17,7 @@
             <button class="menu-toggle" onclick="toggleMenu()">☰</button>
 
             <ul class="nav-links">
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="./quizzes.html">Quiz</a></li>
                 <li><a href="./articles.html">Articles</a></li>
                 <li><a href="./deposit.html">Deposit Supercoins</a></li>
@@ -32,35 +32,35 @@
             <h1>Articles on Waste Segregation and Recycling</h1>
             <article>
                 <a href="./articles/The Importance of Waste Segregation.html">
-                    <img src="images/importance_of_waste_segregation.jpg" alt="The Importance of Waste Segregation" class="thumbnail">
+                    <img src="/k/importance_of_waste_segregation.jpg" alt="The Importance of Waste Segregation" class="thumbnail">
                     <h2>The Importance of Waste Segregation</h2>
                 </a>
                 <p>Learn why waste segregation is essential for effective waste management and how it benefits the environment.</p>
             </article>
             <article>
                 <a href="./articles/How Reverse Vending Machines Work.html">
-                    <img src="images/how_reverse_vending_machines_work.jpg" alt="How Reverse Vending Machines Work" class="thumbnail">
+                    <img src="/k/how_reverse_vending_machines_work.jpg" alt="How Reverse Vending Machines Work" class="thumbnail">
                     <h2>How Reverse Vending Machines Work</h2>
                 </a>
                 <p>Discover the technology behind reverse vending machines and how they encourage recycling.</p>
             </article>
             <article>
                 <a href="./articles/Top 5 Benefits of Recycling.html">
-                    <img src="images/top_5_benefits_of_recycling.jpg" alt="Top 5 Benefits of Recycling" class="thumbnail">
+                    <img src="/k/top_5_benefits_of_recycling.jpg" alt="Top 5 Benefits of Recycling" class="thumbnail">
                     <h2>Top 5 Benefits of Recycling</h2>
                 </a>
                 <p>Explore the numerous benefits of recycling and how it contributes to a sustainable future.</p>
             </article>
             <article>
                 <a href="./articles/Community Initiatives for Waste Management.html">
-                    <img src="images/community_initiatives.jpg" alt="Community Initiatives for Waste Management" class="thumbnail">
+                    <img src="/k/community_initiatives.jpg" alt="Community Initiatives for Waste Management" class="thumbnail">
                     <h2>Community Initiatives for Waste Management</h2>
                 </a>
                 <p>Find out how communities are coming together to improve waste management practices.</p>
             </article>
             <article>
                 <a href="./articles/The Future of Recycling Technology.html">
-                    <img src="images/future_of_recycling_technology.jpg" alt="The Future of Recycling Technology" class="thumbnail">
+                    <img src="/k/future_of_recycling_technology.jpg" alt="The Future of Recycling Technology" class="thumbnail">
                     <h2>The Future of Recycling Technology</h2>
                 </a>
                 <p>Get insights into the latest advancements in recycling technology and their potential impact.</p>
@@ -76,6 +76,6 @@
         </ul>
     </footer>
 
-    <script src="./scripts/script.js"></script>
+    <script src="/scripts/script.js"></script>
 </body>
 </html>
