--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <section class="section">
       <h2>Featured Articles</h2>
       <div class="content-box">
-        <h3><a href="./articles/why-recycling-matters.html">Why Recycling Matters</a></h3>
+        <h3><a href="articles/why-recycling-matters.html">Why Recycling Matters</a></h3>
         <p>Recycling helps conserve natural resources and reduces the burden on landfills. Learn how every bottle counts.</p>
       </div>
       <div class="content-box">
@@ -186,15 +186,15 @@
     <section class="section">
       <h2>Quick Quizzes</h2>
       <div class="content-box">
-        <h3><a href="./quizzes/what-goes-where.html">Quiz: What Goes Where?</a></h3>
+        <h3><a href="./quiz/what-goes-where.html">Quiz: What Goes Where?</a></h3>
         <p>Test your knowledge of proper waste segregation. Click to take the quiz!</p>
       </div>
       <div class="content-box">
-        <h3><a href="./quizzes/plastic-or-metal.html">Quiz: Plastic or Metal?</a></h3>
+        <h3><a href="./quiz/plastic-or-metal.html">Quiz: Plastic or Metal?</a></h3>
         <p>Can you identify the type of waste correctly? Sharpen your sorting skills now.</p>
       </div>
       <div class="content-box">
-        <h3><a href="./quizzes/eco-facts.html">Quiz: Eco Facts</a></h3>
+        <h3><a href="./quiz/eco-facts.html">Quiz: Eco Facts</a></h3>
         <p>Discover interesting facts about the environment and sustainable living through this quick quiz.</p>
       </div>
     </section>
@@ -203,8 +203,8 @@
   <footer>
     <p>&copy; 2023 RBRVM Awareness. All Rights Reserved.</p>
     <ul class="nav-links">
-      <li><a href="/about.html">About</a></li>
-      <li><a href="/contact.html">Contact Us</a></li>
+      <li><a href="./about.html">About</a></li>
+      <li><a href="./contact.html">Contact Us</a></li>
     </ul>
   </footer>
 
