--- a/quiz/plastic-or-metal.html
+++ b/quiz/plastic-or-metal.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Quiz: Plastic or Metal? - RBRVM Awareness</title>
-  <link rel="stylesheet" href="../style/styles.css" />
+  <link rel="stylesheet" href="/styles.css" />
   <link rel="icon" href="/k/logo.jpg" type="image/png" />
 </head>
 <body>
@@ -74,5 +74,6 @@
       document.getElementById('result').textContent = `You scored ${score}/3.`;
     });
   </script>
+  <script src="scripts/script.js"></script>
 </body>
 </html>
