--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <section class="section">
       <h2>Featured Articles</h2>
       <div class="content-box">
-        <h3><a href="articles/why-recycling-matters.html">Why Recycling Matters</a></h3>
+        <h3><a href="./articles/why-recycling-matters.html">Why Recycling Matters</a></h3>
         <p>Recycling helps conserve natural resources and reduces the burden on landfills. Learn how every bottle counts.</p>
       </div>
       <div class="content-box">
